[package]
name = "wiresmith"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"] }
clap_complete = "4"
clap_mangen = "0.2"
freedesktop_entry_parser = "1.3.0"
ipnet = { version = "2", features = ["serde"] }
pnet = "0.33"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wireguard-keys = "0.1"

[dev-dependencies]
rstest = "0.17"
port_check = "0.1"
assert_cmd = "2"
assert_fs = "1"
