[package]
name = "wiresmith"
version = "0.3.0"
description = "Auto-config WireGuard clients into a mesh"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/svenstaro/wiresmith"
license = "MIT"
readme = "README.md"
keywords = ["wireguard", "mesh"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"] }
clap_complete = "4"
clap_mangen = "0.2"
file-owner = "0.1.1"
rust-ini = "0.21"
ipnet = { version = "2", features = ["serde"] }
pnet = "0.35"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wireguard-keys = "0.1"
humantime = "2.1.0"
uuid = { version = "1.8.0", features = ["serde"] }
tokio-util = "0.7.11"
futures = "0.3.30"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
configparser = "3"
port_check = "0.2"
pretty_assertions = "1"
rand = "0.8.5"
rstest = "0.21"
